<resources>
    <string name="app_name">ShoppingCart</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello Guest</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="shop_by_cat">Shop by Category</string>
    <string name="todays_deals">Today\'s Deals</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_wish_list">Your Wish List</string>
    <string name="your_acc">Your Account</string>
    <string name="settings">Settings</string>
    <string name="customer_service">Customer Service</string>

    <string name="shop_by_category">Shop by \n Category</string>
    <string name="what_are_you_looking">What are you looking ...</string>
    <string name="shop_by_prod">Shop by Products</string>
    <string name="label_Sort">Sort</string>
    <string name="label_filter">Filter</string>
    <string name="label_most_viewed">Most Viewed Products</string>
    <string name="label_most_ordered">Most Ordered Products</string>
    <string name="label_most_shared">Most Shared Products</string>
    <string name="btn_label_add_to_cart">ADD TO CART</string>
    <string name="btn_label_buy_now">BUY NOW</string>
    <string name="label_variant_color">Color:</string>
    <string name="label_no_cost_emi">No Cost EMI</string>
    <string name="discount_info">50% off</string>
    <string name="no_data">No Data</string>
</resources>
