<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shop_by_cat"
            android:title="@string/shop_by_cat" />
        <item
            android:id="@+id/nav_todays_deals"
            android:title="@string/todays_deals" />

        <item
            android:id="@+id/nav_your_orders"
            android:title="@string/your_orders" />
        <item
            android:id="@+id/nav_your_wish_list"
            android:title="@string/your_wish_list" />
        <item
            android:id="@+id/nav_your_acc"
            android:title="@string/your_acc" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_customer_service"
            android:title="@string/customer_service" />
    </group>

</menu>
