<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/no_data_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/group_action_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/sort_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/separate_actions"
            android:gravity="center">

            <ImageView
                android:id="@+id/sort_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sort_icon_q" />

            <TextView
                android:id="@+id/textViewSort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/label_Sort" />
        </LinearLayout>

        <View
            android:id="@+id/separate_actions"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/separate_actions"
            android:gravity="center">

            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filter_icon" />

            <TextView
                android:id="@+id/textViewFilter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/label_filter" />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/group_action_container"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewForGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>